fx(agenda): page transition

--- a/app/globals.css
+++ b/app/globals.css
@@ -29,4 +29,8 @@
   .no-scrollbar::-webkit-scrollbar {
     display: none;
   }
+
+  .eventTitle {
+    @apply text-[5rem] font-semibold uppercase leading-[5rem] tracking-tighter;
+  }
 }
