--- a/app/globals.css
+++ b/app/globals.css
@@ -31,6 +31,6 @@
   }
 
   .eventTitle {
-    @apply text-[5rem] font-semibold uppercase leading-[5rem] tracking-tighter;
+    @apply text-start text-[5rem] font-semibold uppercase leading-[5rem] tracking-tighter;
   }
 }
