feat: Update homepage with new Hero and OutroBlock components
- Remove unnecessary code in page.tsx, VideoBlock.tsx, header.tsx, and footer.tsx
- Update Hero component in hero.tsx to use SplitText animation for the title
- Add OutroBlock component in OutroBlock.tsx to display outro text with styling
- Update globals.css to include styles for heroTitle and eventTitle classes

--- a/app/globals.css
+++ b/app/globals.css
@@ -30,6 +30,10 @@
     display: none;
   }
 
+  .heroTitle {
+    @apply overflow-hidden text-[3rem] font-bold uppercase leading-[3.5rem] tracking-tighter lg:text-[5rem] lg:leading-[4.5rem] lg:tracking-tighter;
+  }
+
   .eventTitle {
     @apply text-start text-[4rem] font-semibold uppercase leading-[4rem] tracking-tighter lg:text-[5rem] lg:leading-[5rem];
   }
