feat: Add node-fetch dependency and update homepage with lazy loading for images
- Add node-fetch@3.3.2 as a dependency in package.json
- Update page.tsx to include lazy loading for images
- Create providers.tsx to add Toaster component for notifications
- Update hero.tsx to remove unnecessary code and add key prop to Link component
- Update layout.tsx to adjust left margin for larger screens
- Update HeaderMobile.tsx to remove unnecessary imports
- Update route.ts to include an attachment in the email
- Update alert-banner.tsx to fix styling and add z-index
- Update globals.css to include styles for headerItem and sideBarTitle classes
- Update schema.ts to include title field in FormDataSchema and ContactFormSchema
- Update structure.ts to exclude multi-images, contact-form, and lastEvent document types
- Create MultiImages.tsx component to display multiple images

--- a/app/globals.css
+++ b/app/globals.css
@@ -30,8 +30,16 @@
     display: none;
   }
 
+  .headerItem {
+    @apply text-[1.5rem] font-semibold uppercase leading-[1.5rem] tracking-tighter lg:text-[1rem] lg:leading-[1rem];
+  }
+
   .heroTitle {
     @apply overflow-hidden text-[3rem] font-bold uppercase leading-[3.5rem] tracking-tighter lg:text-[5rem] lg:leading-[4.5rem] lg:tracking-tighter;
+  }
+
+  .sideBarTitle {
+    @apply text-start text-[1rem] leading-[1.3rem] tracking-tighter;
   }
 
   .eventTitle {
