feat: Update homepage with lazy loading for images and improve module components
- Add lazy loading for images in the homepage to improve page load performance
- Update Hero component to use SplitText animation for the title
- Add OutroBlock component to display outro text with styling
- Remove unnecessary code in page.tsx, VideoBlock.tsx, header.tsx, and footer.tsx
- Update globals.css to include styles for heroTitle and eventTitle classes

--- a/app/globals.css
+++ b/app/globals.css
@@ -34,6 +34,10 @@
     @apply text-[1.5rem] font-semibold uppercase leading-[1.5rem] tracking-tighter lg:text-[1rem] lg:leading-[1rem];
   }
 
+  .headerMobileItem {
+    @apply text-[1.5rem] font-semibold uppercase leading-[1.5rem] tracking-tighter;
+  }
+
   .heroTitle {
     @apply overflow-hidden text-[3rem] font-bold uppercase leading-[3.5rem] tracking-tighter lg:text-[5rem] lg:leading-[4.5rem] lg:tracking-tighter;
   }
