refactor: Update homepageQuery to include upcomingEventsSection and marqueeCTA in sanity/lib/queries.ts

--- a/app/globals.css
+++ b/app/globals.css
@@ -2,10 +2,14 @@
 @tailwind components;
 @tailwind utilities;
 
-@layer components {
+@layer base {
   .no-scrollbar::-webkit-scrollbar {
     display: none;
   }
+}
+
+@layer components {
+  /* 👇🏽 HomePage */
 
   .headerItem {
     @apply font-tanker text-headerMobile uppercase leading-headerMobile tracking-wide lg:text-headerDesktop lg:leading-headerDesktop;
@@ -31,8 +35,16 @@
     @apply font-jetbrains text-[.7rem] uppercase leading-[.7rem] tracking-widest text-white transition-colors duration-300 ease-tamisitée group-hover:text-pink-arch;
   }
 
+  .heroButtonTransition {
+    @apply transition-[transform,padding] duration-300 ease-tamisitée group-hover:translate-y-0 group-hover:py-[1rem];
+  }
+
   .newsLetterInput {
     @apply h-[2.5rem] flex-1 bg-transparent font-cityburn text-[1.25rem] tracking-wider text-white placeholder:text-[1.25rem] placeholder:tracking-wider placeholder:text-white focus-within:placeholder-transparent focus-within:outline-none focus:ring-0 lg:text-[1.75rem] lg:placeholder:text-[1.75rem];
+  }
+
+  .upcomingEventsBoxSize {
+    @apply h-[50%] max-h-[50%] w-[100%] max-w-[100%];
   }
 
   .sideBarTitle {
@@ -59,5 +71,29 @@
 
   .boxRounded {
     @apply rounded-b-3xl rounded-tl-lg rounded-tr-3xl;
+  }
+
+  /* 👇🏽 Marquee */
+  .marquee-container {
+    overflow: hidden;
+  }
+
+  .marquee {
+    display: inline-block;
+    padding-left: 100%;
+    animation: marquee 10s linear infinite;
+  }
+
+  .marquee-container:hover .marquee {
+    animation-play-state: paused;
+  }
+
+  @keyframes marquee {
+    0% {
+      transform: translateX(100%);
+    }
+    100% {
+      transform: translateX(-100%);
+    }
   }
 }
