refactor: Update event date and location styles in EventsMap component

--- a/app/globals.css
+++ b/app/globals.css
@@ -102,6 +102,10 @@
   }
 
   .eventDate {
+    @apply font-jetbrains text-[.8rem] uppercase leading-[.5rem];
+  }
+
+  .eventLocation {
     @apply font-jetbrains text-[.8rem] uppercase leading-[.8rem];
   }
 
