--- a/app/globals.css
+++ b/app/globals.css
@@ -157,12 +157,13 @@
 
   /* 👇🏽 Marquee */
   .marquee-container {
+    position: relative;
     overflow: hidden;
   }
 
   .marquee {
     display: inline-block;
-    padding-left: 100%;
+    padding-left: 10rem;
     animation: marquee 10s linear infinite;
   }
 
@@ -172,7 +173,7 @@
 
   @keyframes marquee {
     0% {
-      transform: translateX(100%);
+      transform: translateX(0);
     }
     100% {
       transform: translateX(-100%);
