Refactor page component: Remove console.log statement
Remove the console.log statement in the Page component of the liste-des-fonds directory to clean up the code.

Refactor .env.local.example: Add missing environment variables

Add the missing environment variables for the site URL, resend mail API key, mailchimp API key, mailchimp API server, and mailchimp audience ID in the .env.local.example file.

Refactor layout component: Update metadata

Update the metadata in the layout component to set the title and description for the Archives LGBTQI+.

Refactor package.json: Add axios and formik dependencies

Add the axios and formik dependencies to the package.json file.

Refactor LDFDesktopSidebar component: Remove console.log statement

Remove the console.log statement in the LDFDesktopSidebar component to clean up the code.

Refactor globals.css: Update styles for newsletter input

Update the styles for the newsletter input in the globals.css file to make it full width.

Add newsletter route

Add the newsletter route to handle POST requests for subscribing to the newsletter.

Refactor IntroTextAndNewsletter component: Update newsletter input

Update the newsletter input in the IntroTextAndNewsletter component to use the Newsletters component.

--- a/app/globals.css
+++ b/app/globals.css
@@ -40,7 +40,7 @@
   }
 
   .newsLetterInput {
-    @apply h-[2.5rem] flex-1 bg-transparent font-cityburn text-[1.25rem] tracking-wider text-white placeholder:text-[1.25rem] placeholder:tracking-wider placeholder:text-white focus-within:placeholder-transparent focus-within:outline-none focus:ring-0 lg:text-[1.75rem] lg:placeholder:text-[1.75rem];
+    @apply h-[2.5rem] w-full flex-1 bg-transparent font-cityburn text-[1.25rem] tracking-wider text-white placeholder:text-[1.25rem] placeholder:tracking-wider placeholder:text-white focus-within:placeholder-transparent focus-within:outline-none focus:ring-0 lg:text-[1.75rem] lg:placeholder:text-[1.75rem];
   }
 
   .upcomingEventsBoxSize {
@@ -62,7 +62,7 @@
   }
 
   .footerNewsLetterInput {
-    @apply h-[1.5rem] flex-1 bg-transparent font-jetbrains text-[1rem] tracking-wider text-white placeholder:text-[.8rem] placeholder:tracking-wider placeholder:text-white focus-within:placeholder-transparent focus-within:outline-none focus:ring-0;
+    @apply h-[1.5rem] flex-1 bg-transparent font-jetbrains text-[.8rem] tracking-wider text-white placeholder:text-[.8rem] placeholder:tracking-wider placeholder:text-white focus-within:placeholder-transparent focus-within:outline-none focus:ring-0;
   }
 
   /* 👇🏽 All page */
