--- a/app/globals.css
+++ b/app/globals.css
@@ -44,7 +44,7 @@
   }
 
   .upcomingEventsBoxSize {
-    @apply h-[50%] max-h-[50%] w-[100%] max-w-[100%];
+    @apply h-[50%] max-h-[50%] w-[100%] max-w-[100%] object-cover;
   }
 
   /* 👇🏽 Footer */
