Refactor: Add validation for maximum number of upcoming events
- Added validation to the "upcomingEvents" field in the "homepage" singleton schema to limit the maximum number of events to 3.

Refactor: Adjust styles in FormSubmitInput and deroulantTitle classes

- Updated the border width in the FormSubmitInput class to 2px.
- Adjusted the font size and leading in the deroulantTitle class.

Refactor: Update keyframes for marquee and scroll animations

- Modified the keyframes for the marquee and scroll animations in the tailwind.config.ts file.

Refactor: Update layout and styles in UpcomingEvents component

- Changed the layout of the flex container in the UpcomingEvents component to a flex column on large screens.
- Adjusted the font size and leading in the heading element.

Refactor: Update image rendering in EventsMap and ButtonImage components

- Replaced the custom ButtonImage component with the Image component from the next/image package in the EventsMap component.
- Updated the dimensions and styling of the Image component in the ButtonImage component.

Refactor: Update layout and styles in Footer component

- Added margin-bottom to the mail address link in the Footer component.

Refactor: Update layout and styles in CreationArchivesModule component

- Adjusted the border width and spacing in the CreationArchivesModule component.

Refactor: Update title in SecondSection component

- Modified the title in the SecondSection component to include line breaks for the "La plateforme d’archives orales" section.

--- a/app/globals.css
+++ b/app/globals.css
@@ -92,7 +92,11 @@
   }
 
   .FormSubmitInput {
-    @apply flex w-full rounded-none border-b-[3px] border-black font-cityburn text-[1.6rem] tracking-wider text-black placeholder:font-cityburn placeholder:text-[1.6rem] placeholder:leading-[1.5rem] placeholder:tracking-wider placeholder:text-black focus-within:outline-none focus:ring-0;
+    @apply flex w-full rounded-none border-b-[2px] border-black font-cityburn text-[1.6rem] tracking-wider text-black placeholder:font-cityburn placeholder:text-[1.6rem] placeholder:leading-[1.5rem] placeholder:tracking-wider placeholder:text-black focus-within:outline-none focus:ring-0;
+  }
+
+  .deroulantTitle {
+    @apply whitespace-nowrap font-cityburn text-[1.3rem] leading-[1.7rem] tracking-wider lg:whitespace-normal lg:text-[1.6rem] lg:leading-[2rem];
   }
 
   /* 👇🏽 Events */
